feat: add work with user program day
